--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "d3",
+  "name": "d3-reddit",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "d3": "^5.7.0",
     "react": "^16.6.1",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1"
   },
